--- a/app/design/frontend/foundation/default/template/manapro/filtersuperslider/price.phtml
+++ b/app/design/frontend/foundation/default/template/manapro/filtersuperslider/price.phtml
@@ -34,11 +34,11 @@
                 $manualEntryOptions->setSliderNumberFormat('0')->setSliderNumberFormat2('0')->setThousandSeparator('0');
             ?>
             <?php echo $_superHelper->beforeInput($_filter->getFilterOptions()) ?><input type="text" class="m-slider m-from" size="2" value="<?php echo $_superHelper->formatNumber($_filter->getCurrentRangeLowerBound(), $manualEntryOptions) ?>" /><?php echo $_superHelper->afterInput($_filter->getFilterOptions()) ?>
-            <?php echo $_superHelper->__('to') ?>
+            <?php echo $_superHelper->__('bis') ?>
             <?php echo $_superHelper->beforeInput($_filter->getFilterOptions()) ?><input type="text" class="m-slider m-to"size="2" value="<?php echo $_superHelper->formatNumber($_filter->getCurrentRangeHigherBound(), $manualEntryOptions) ?>" /><?php echo $_superHelper->afterInput($_filter->getFilterOptions()) ?>
         </span>
         <?php else: ?>
-		<span id="<?php echo $_id ?>-applied" class="m-slider-selected-value"><?php echo $_helper->__('%s to %s', $_superHelper->formatNumber($_filter->getCurrentRangeLowerBound(), $_filter->getFilterOptions()), $_superHelper->formatNumber($_filter->getCurrentRangeHigherBound(), $_filter->getFilterOptions()))?></span>
+		<span id="<?php echo $_id ?>-applied" class="m-slider-selected-value"><?php echo $_helper->__('%s bis %s', $_superHelper->formatNumber($_filter->getCurrentRangeLowerBound(), $_filter->getFilterOptions()), $_superHelper->formatNumber($_filter->getCurrentRangeHigherBound(), $_filter->getFilterOptions()))?></span>
 		<?php endif; ?>
 	</div>
 
