--- a/app/design/frontend/foundation/default/template/catalog/layer/view.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/layer/view.phtml
@@ -34,13 +34,9 @@
 <?php if($this->canShowBlock()): ?>
 <div class="block block-layered-nav">
     <div class="block-title">
-        <strong><span><?php echo $this->__('Shop By') ?></span></strong>
+        <?php echo $this->__('Suche verfeinern') ?>
     </div>
     <div class="block-content">
-        <?php echo $this->getStateHtml() ?>
-        <?php if ($this->getLayer()->getState()->getFilters()): ?>
-            <div class="actions"><a href="<?php echo $this->getClearUrl() ?>"><?php echo $this->__('Clear All') ?></a></div>
-        <?php endif; ?>
         <?php if($this->canShowOptions()): ?>
             <p class="block-subtitle"><?php echo $this->__('Shopping Options') ?></p>
             <dl id="narrow-by-list">
