--- a/skin/frontend/foundation/default/src/assets/scss/custom/_product.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_product.scss
@@ -31,9 +31,10 @@
                 color: $alert-color;
               }
             }
-            .regular-price .price-label {
-              cursor: pointer;
+            .regular-price, .mwst-price, .skontodiscount {
+              display: none;
             }
+
           }
         }
         li.tier-price {
