--- a/skin/frontend/foundation/default/src/assets/scss/custom/_grid.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_grid.scss
@@ -241,9 +241,11 @@ header {
             @include xy-cell(12, false, 0);
           }
         }
-        .msrp-price, .old-price, .special-price, .regular-price, .mwst-price, .skonto-price, .skontotax-price {
+        .msrp-price, .old-price, .special-price, .skonto-price, .skontotax-price {
           @include xy-grid;
           @include xy-grid-layout(2, 'span');
+          justify-content: center;
+          align-items: center;
         }
       }
     }
