--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -26,7 +26,9 @@
                     <li>
                         <a href="<?php echo Mage::getUrl('bestellvorgang'); ?>"><?php echo $this->__('Bestellvorgang') ?></a>
                     </li>
-                    <li><a href="<?php echo Mage::getUrl('lieferung'); ?>"><?php echo $this->__('Lieferung') ?></a></li>
+                    <li>
+                        <a href="<?php echo Mage::getUrl('lieferung'); ?>"><?php echo $this->__('Lieferung') ?></a>
+                    </li>
                     <li>
                         <a href="<?php echo Mage::getUrl('zahlungsarten'); ?>"><?php echo $this->__('Zahlungsarten') ?></a>
                     </li>
@@ -44,11 +46,16 @@
                     <li>
                         <a href="<?php echo Mage::getUrl('batteriegesetz'); ?>"><?php echo $this->__('Batteriegesetz') ?></a>
                     </li>
-                    <li><a href="<?php echo Mage::getUrl('referenzen'); ?>"><?php echo $this->__('Referenzen') ?></a>
+                    <li>
+                        <a href="<?php echo Mage::getUrl('referenzen'); ?>"><?php echo $this->__('Referenzen') ?></a>
+                    </li>
+                    <li>
+                        <a href="<?php echo Mage::getUrl('top15'); ?>"><?php echo $this->__('Top 15') ?></a>
                     </li>
                     <li>
                         <a href="<?php echo Mage::getUrl('catalogsearch/advanced'); ?>"><?php echo $this->__('Erweiterte Suche') ?></a>
                     </li>
+
                 </ul>
             </div>
             <div class="footer_service">
@@ -59,7 +66,9 @@
                     <li><a href="<?php echo Mage::getUrl('contacts'); ?>"><?php echo $this->__('Kontakt') ?></a></li>
                     <li><a href="<?php echo Mage::getUrl('leistungen'); ?>"><?php echo $this->__('Leistungen') ?></a>
                     </li>
-                    <li><a href="<?php echo Mage::getUrl('digitale-kueche-smart-kitchen'); ?>"><?php echo $this->__('Digitale Küche') ?></a></li>
+                    <li>
+                        <a href="<?php echo Mage::getUrl('digitale-kueche-smart-kitchen'); ?>"><?php echo $this->__('Digitale Küche') ?></a>
+                    </li>
                     <li><a href="<?php echo Mage::getUrl('planung'); ?>"><?php echo $this->__('Planung') ?></a></li>
                     <li>
                         <a href="<?php echo Mage::getUrl('altgeraeteentsorgung'); ?>"><?php echo $this->__('Altger&auml;teentsorgung') ?></a>
