--- a/app/design/frontend/foundation/default/template/page/html/header.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/header.phtml
@@ -60,7 +60,7 @@
                     </a>
                 </li>
                 <li class="deal">
-                    <a href="<?php echo Mage::getUrl('top15'); ?>">TOP15</a>
+                    <a href="<?php echo Mage::getUrl('super-sale'); ?>">SALE</a>
                 </li>
             </ul>
         </div>
