--- a/skin/frontend/foundation/default/src/assets/scss/custom/_menu.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_menu.scss
@@ -1,5 +1,8 @@
 .off-canvas-wrapper {
   .nav {
+    li.first.level-top{
+      border-top: 1px solid $white;
+    }
     button {
       border-radius: 0;
     }
