add copyright to footer

--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -217,5 +217,8 @@
                                 aria-hidden="true"></i></a></li>
             </ul>
         </div>
+        <div class="copyright">
+            <p>© 1990 - <?php echo date("Y"); ?> New Gastroline GmbH</p>
+        </div>
     </div>
 </footer>
