--- a/skin/frontend/foundation/default/src/assets/scss/custom/_footer.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_footer.scss
@@ -73,7 +73,7 @@ footer {
     background: scale-color($primary-color, $lightness: -60%);
     .social {
       text-align: center;
-      margin: 0 0 1rem 0;
+      margin: 0 0 .5rem 0;
       ul {
         li {
           display: inline;
@@ -90,8 +90,10 @@ footer {
         }
       }
     }
-    .org {
+    .org, .copyright {
       text-align: center;
+      color: #DDDDDD;
+      font-size: .9rem;
       ul {
         @include menu-base;
         display: block;
