add ts-badge bottom

--- a/skin/frontend/foundation/default/src/assets/scss/custom/_header.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_header.scss
@@ -64,8 +64,11 @@ header {
         a {
           padding: 0.5rem;
         }
-        .shipping, .deal {
+        .shipping {
           @include show-for(xlarge);
+        }
+        .deal {
+          @include show-for(large);
         }
         .deal a {
           color: $white;
