change special ribbon

--- a/app/design/frontend/foundation/default/template/catalog/product/view/addto.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/view/addto.phtml
@@ -53,7 +53,7 @@ $_compareUrl = $this->helper('catalog/product_compare')->getAddUrl($_product);
     <li class="description">
         <div class="custom-quote"><p>Fragen Sie nach unserem g&uuml;nstigen Hauspreis!</p>
             <div class="stacked-for-small button-group">
-                <a class="button" href="tel:+498004566000" rel="nofollow noopener noreferrer">Hotline 0800 456 6000</a>
+                <a class="button hollow" href="tel:+498004566000" rel="nofollow noopener noreferrer"><i class="fa fa-phone"></i> <strong>0800 456 6000</strong></a>
                 <a class="button hollow" href="mailto:shop@gastrodax.de" rel="nofollow noopener noreferrer">shop@gastrodax.de</a>
             </div>
         </div>
