add pagespeed lazyload animated gif

--- a/skin/frontend/foundation/default/src/assets/scss/_settings.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/_settings.scss
@@ -73,7 +73,7 @@ $foundation-palette: (
         secondary: #ff9200,
         success: #008B00,
         warning: #FFA500,
-        alert: #ec5840,
+        alert: #FF0000,
         follower: #ed4a00
 );
 $light-gray: #e6e6e6;
