--- a/skin/frontend/foundation/default/src/assets/scss/_settings.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/_settings.scss
@@ -69,11 +69,11 @@ $global-font-size: 100%;
 $global-width: rem-calc(1300);
 $global-lineheight: 1.5;
 $foundation-palette: (
-        primary: #000C44,
+        primary: #000c44,
         secondary: #ff9200,
         success: #008B00,
-        warning: #FFA500,
-        alert: #FF0000,
+        warning: #ffa500,
+        alert: #ff0000,
         follower: #ed4a00
 );
 $light-gray: #e6e6e6;
