--- a/app/design/frontend/foundation/default/template/page/html/cookienotice.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/cookienotice.phtml
@@ -2,7 +2,7 @@
 <div class="global-site-notice notice-cookie" id="notice-cookie-block">
     <div class="notice-inner">
         <div class="notice-text"><?php echo $this->getCookieRestrictionBlockContent(); ?></div>
-        <div class="actions"><button class="button" onclick="allowSaveCookie()"><span><span><?php echo $this->__('Allow');?></span></span></button></div>
+        <div class="actions"><button class="button tiny" onclick="allowSaveCookie()"><span><span><?php echo $this->__('Allow');?></span></span></button></div>
     </div>
 </div>
 <script type="text/javascript">
