change contact form

--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -24,6 +24,9 @@
                 <p><?php echo $this->__('Informationen') ?></p>
                 <ul>
                     <li>
+                        <a href="<?php echo Mage::getUrl(''); ?>"><?php echo $this->__('Startseite') ?></a>
+                    </li>
+                    <li>
                         <a href="<?php echo Mage::getUrl('bestellvorgang'); ?>"><?php echo $this->__('Bestellvorgang') ?></a>
                     </li>
                     <li>
