--- a/app/design/frontend/foundation/default/template/magesetup/contacts/form.phtml
+++ b/app/design/frontend/foundation/default/template/magesetup/contacts/form.phtml
@@ -38,11 +38,12 @@
                 href="mailto:shop@gastrodax.de">shop@gastrodax.de</a>.</p>
         <p><em>Ihre Ansprechpartner:</em></p>
         <ul class="arrow">
-            <li>Herr Sebastian Pust</li>
             <li>Frau Anja Jentsch</li>
+            <li>Frau Cornelia Reichstein</li>
+            <li>Herr Sebastian Pust</li>
             <li>Herr Stefan Frank</li>
-            <li>Frau Doris Schulz</li>
             <li>Herr Rene Reichel</li>
+            <li>Herr Eric Zegel</li>
         </ul>
         <p>Unsere Mitarbeiter sind gern f&uuml;r Sie da.<br/>Ihr Gastrodax Team</p>
     </div>
