--- a/app/design/frontend/foundation/default/template/page/html/topmenu.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/topmenu.phtml
@@ -2,5 +2,7 @@
 <?php if ($_menu): ?>
     <ul class="vertical menu accordion-menu nav" data-accordion-menu data-multi-open="false" data-submenu-toggle="true">
         <?php echo $_menu ?>
+        <li><a href="<?php echo Mage::getUrl('hersteller/bartscher'); ?>">Bartscher Shop</a></li>
+        <li><a href="<?php echo Mage::getUrl('hersteller/aliseo'); ?>">Aliseo Profishop</a></li>
     </ul>
 <?php endif ?>
