--- a/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
@@ -311,3 +311,15 @@
     text-align: center;
   }
 }
+
+#narrow-by-list2 {
+  @include breakpoint(medium down) {
+    display: none;
+  }
+}
+
+#narrow-by-list {
+  @include breakpoint(medium down) {
+
+  }
+}
