change link in footerbox

--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -96,7 +96,7 @@
                     <li>
                         <a href="<?php echo Mage::getUrl('digitale-kueche-smart-kitchen'); ?>"><?php echo $this->__('Digitale Küche') ?></a>
                     </li>
-                    <li><a href="<?php echo Mage::getUrl('planung'); ?>"><?php echo $this->__('Planung') ?></a></li>
+                    <li><a href="<?php echo Mage::getUrl('wir-planen-gastro-kuechen'); ?>"><?php echo $this->__('Küchenplanung') ?></a></li>
                     <li>
                         <a href="<?php echo Mage::getUrl('altgeraeteentsorgung'); ?>"><?php echo $this->__('Altger&auml;teentsorgung') ?></a>
                     </li>
