--- a/skin/frontend/foundation/default/src/assets/scss/custom/_grid.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_grid.scss
@@ -279,6 +279,18 @@ header {
   }
 }
 
+.promotion-products {
+  .item {
+    .price-box{
+      .regular-price {
+        line-height: 1rem !important;
+        justify-content: center;
+        align-items: center;
+      }
+    }
+  }
+}
+
 //CMS
 .home-content {
   @include xy-grid;
